--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -6,18 +6,31 @@
     --color-base: rgba(187, 55, 55, 0.863) ;
     --color-base2: #5f2424ad;
     --color-base3: #ffc0cb54;
-    --color-brand: #e65ab0;
+    --color-brand: #cf5ae6;
     --color-brand2: #e724dd;
+    --color-none:black;
     --sidbar-width: 240px;
     --font-base:"Bai Jamjuree";
 
 
 }
-
 body{
-    background-color: var(--color-base);
-    color: var(--color-body);
-    font-family: var(--font-base), sans-serif;
+    background-color: black;
+}
+#myVideo {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    z-index: -1;
+  }
+  
+.home{
+    padding-left: 10px;
 }
 h1,h2,h3,h4,h5,h6{
     color: var(--color-heading);
@@ -93,7 +106,7 @@ p{
     .navbar {
         min-height: 100vh;
         width: var(--sidbar-width);
-        background: linear-gradient( #963c3cab , #963c3ca4 ),url(../images/sidebar.jpeg);
+        background: linear-gradient( #963c3cab , #963c3ca4 ),url(../images/white.jpg);
         background-size: cover;
         background-position: center;
        
@@ -143,3 +156,15 @@ p{
     .link-custom:hover::after {
         width: 100%;
     }
+
+    /* work card */
+
+.card-custom, card-custom-image img {
+    overflow: hidden;
+}
+.card-custom .card-custom-image img {
+    transition: all 0.4s ease;
+}
+.card-custom:hover .card-custom-image img {
+    transform: scale(1.1);
+}
