--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -106,7 +106,7 @@ p{
     .navbar {
         min-height: 100vh;
         width: var(--sidbar-width);
-        background: linear-gradient( #963c3cab , #963c3ca4 ),url(../images/white.jpg);
+        background: linear-gradient( #963c3cab , #963c3ca4 ),url(../images/c.jpg);
         background-size: cover;
         background-position: center;
        
