--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -168,3 +168,88 @@ p{
 .card-custom:hover .card-custom-image img {
     transform: scale(1.1);
 }
+
+.contactMe{
+    position: relative;
+    width: 100%;
+    padding: 40px 100px;
+}
+
+.form{
+    grid-area: form;
+}
+.info {
+    grid-area: info;
+
+}
+.map{
+grid-area: map;
+}
+.contact {
+    padding: 10px;
+    background: var(--color-base3);
+    box-shadow: 0 5px 35px ;
+}
+
+.box {
+    position: relative;
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    grid-template-rows: 5fr 4fr;
+    grid-template-areas: 
+    "form info"
+    "form map";
+    grid-gap: 20px;
+    margin-top: 20px;
+}
+
+.formBox{
+    position: relative;
+    width: 100%;
+
+}
+.formBox .row50{
+    display: flex;
+    gap: 20px;
+}
+
+.inputBox {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 10px;
+    width: 50%;
+}
+.formBox .row100 .inputBox {
+    width: 100%;
+}
+.inputBox span {
+    color: #cf5ae6;
+    margin-top: 10px;
+    margin-bottom: 5px;
+    font-weight: 500;
+}
+.inputBox input {
+    padding: 10px;
+    font-size: 1.1em;
+    outline: none;
+    border: 1px solid black;
+}
+.inputBox textarea {
+    padding: 10px;
+    font-size: 1.1em;
+    outline: none;
+    border: 1px solid black;
+    resize: none;
+    min-height: 220px;
+    margin-bottom: 10px;
+}
+
+.inputBox input[type="submit"] {
+    background: #e724dd;
+    border: none;
+    font-size: 1.1em;
+    max-width: 120px;
+    font-weight: 500;
+    cursor: pointer;
+    padding: 14px 15px;
+}
