--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -253,3 +253,57 @@ grid-area: map;
     cursor: pointer;
     padding: 14px 15px;
 }
+.info{
+    background: #ffc0cbc4;
+}
+
+.info h3{
+    color: azure;
+}
+.info .infoBox div{
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+}
+
+.info .infoBox div span {
+    min-width: 40px;
+    height: 40px;
+    color: azure;
+    background: #cf5ae6;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.5em;
+    border-radius: 50%;
+    margin-right: 15px;
+}
+.info .infoBox div p {
+    color: white;
+    font-size: 1.1em;
+
+}
+.info .infoBox div a {
+    color: white;
+    text-decoration: none;
+    font-size: 1.1em;
+}
+.sci {
+    margin-top: 40px;
+    display: flex;
+}
+
+.sci li {
+    list-style: none;
+    margin-right: 15px;
+}
+
+.sci li a {
+    color: white;
+    font-size: 2em;
+    color: #ccc;
+}
+
+.sci li a:hover {
+    color:var(--color-brand);
+}
