--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -89,7 +89,7 @@ p{
 
 /* navbar */
 .navbar {
-    background-color: var(--color-base);
+    background-color: var(--color-base3);
 }
 .navbar .nav-link{
     font-weight:700;
@@ -106,7 +106,7 @@ p{
     .navbar {
         min-height: 100vh;
         width: var(--sidbar-width);
-        background: linear-gradient( #963c3cab , #963c3ca4 ),url(../images/c.jpg);
+        background: linear-gradient( #963c3cab , #963c3ca4 ),url(../images/sidebar.jpeg);
         background-size: cover;
         background-position: center;
        
@@ -129,13 +129,13 @@ p{
         font-weight: 700;
     }
     .btn-brand {
-        background-color: var(--color-brand);
+        background-color: var(--color-base3);
         border-color: var(--color-brand);
     }
     .btn-brand:hover,
     .btn-brand:focus {
-        background-color: var(--color-brand);
-        color: var(--color-base);
+        background-color: var(--color-brand2);
+        color: var(--color-none);
         border-color: var(--color-brand2);
 
     }
